--- a/concourse/pipelines/pipeline.yml
+++ b/concourse/pipelines/pipeline.yml
@@ -709,7 +709,10 @@ jobs:
       action: create
       delete_on_failure: true
       generate_random_name: true
-      <<: *ccp_options
+      ccp_options_anchor: &ccp_options
+        terraform_source: ccp_src/aws/
+        vars:
+          aws_instance-node-instance_type: t2.medium
   - task: gen_cluster
     file: ccp_src/ci/tasks/gen_cluster.yml
     on_failure:
@@ -1437,17 +1440,14 @@ jobs:
 ## reusable anchors
 ## ======================================================================
 
-ccp_options_anchor: &ccp_options
-  terraform_source: ccp_src/aws/
-  vars:
-    aws_instance-node-instance_type: r3.xlarge
-
 ccp_destroy_anchor: &ccp_destroy
   put: terraform
   params:
     action: destroy
     env_name_file: terraform/name
-    <<: *ccp_options
+    terraform_source: ccp_src/aws/
+    vars:
+      aws_instance-node-instance_type: t2.micro
   get_params:
     action: destroy
 
