Suggested changes from toolsmiths
The source code for gpdb is being copied to the master node, so there is no need to run scripts
in the container that can be directly run on the master node.  This makes scripts in the GPDB source
tree not depend on the connection that CI system has to the cluster, just that your test is running on
a cluster.

Signed-off-by: Divya Bhargov <dbhargov@pivotal.io>

--- a/concourse/pipelines/pipeline.yml
+++ b/concourse/pipelines/pipeline.yml
@@ -709,10 +709,9 @@ jobs:
       action: create
       delete_on_failure: true
       generate_random_name: true
-      ccp_options_anchor: &ccp_options
-        terraform_source: ccp_src/aws/
-        vars:
-          aws_instance-node-instance_type: t2.medium
+      terraform_source: ccp_src/aws/
+      vars:
+        aws_instance-node-instance_type: t2.medium
   - task: gen_cluster
     file: ccp_src/ci/tasks/gen_cluster.yml
     on_failure:
@@ -721,9 +720,9 @@ jobs:
     file: gpdb_src/concourse/tasks/run_behave.yml
     image: centos-gpdb-dev-6
     params:
-      BEHAVE_TAGS: --tags=analyzedb,backups,backup_and_restore_backups,backup_and_restore_restores,restores --tags=-nbuonly --tags=-ddonly
+      BEHAVE_FLAGS: --tags=analyzedb,backups,backup_and_restore_backups,backup_and_restore_restores,restores --tags=-nbuonly --tags=-ddonly
     on_failure:
-      <<: *ccp_destroy
+      <<: *debug_sleep
   - *ccp_destroy
 
 - name: MM_gppkg
