--- a/concourse/pipelines/pipeline.yml
+++ b/concourse/pipelines/pipeline.yml
@@ -19,6 +19,7 @@ groups:
   - MM_analyzedb
   - DPM_backup-restore
   - MM_gppkg
+  - MM_gpinitsystem
   - MM_pt-rebuild
   - fts
   - storage
@@ -845,6 +846,25 @@ jobs:
     on_failure:
       <<: *debug_sleep
   - *ccp_destroy
+
+- name: MM_gpinitsystem
+  plan:
+  - aggregate:
+    - get: gpdb_src
+      params:
+        submodules:
+        - gpMgmt/bin/pythonSrc/ext
+      passed: [compile_gpdb_centos6]
+    - get: bin_gpdb
+      resource: bin_gpdb_centos6
+      passed: [compile_gpdb_centos6]
+      trigger: true
+    - get: centos-gpdb-dev-6
+  - task: gpinitsystem
+    file: gpdb_src/concourse/tasks/behave_gpdb.yml
+    image: centos-gpdb-dev-6
+    params:
+      BEHAVE_FLAGS: --tags=gpinitsystem
 
 - name: MM_pt-rebuild
   plan:
