Detect cgroup mount point in test code and fix some bugs.
1. Detect cgroup mount point in test code.
2. Fix bug when buflen is 0.
3. Check cgroup status on master in gpconfig.
4. Fix coverity warnings.

--- a/src/test/isolation2/expected/.gitignore
+++ b/src/test/isolation2/expected/.gitignore
@@ -1,2 +1,6 @@
 resgroup_memory_statistic.out
 resgroup_memory_limit.out
+disable_resgroup.out
+enable_resgroup.out
+enable_resgroup_validate.out
+resgroup_cpu_rate_limit.out
