--- a/src/test/isolation2/sql/.gitignore
+++ b/src/test/isolation2/sql/.gitignore
@@ -1,2 +1,6 @@
 resgroup_memory_statistic.sql
 resgroup_memory_limit.sql
+disable_resgroup.sql
+enable_resgroup.sql
+enable_resgroup_validate.sql
+resgroup_cpu_rate_limit.sql
