Refactoring cast functions into `CUtilsCasts`
This commit creates a new file `CCastUtils.cpp` which maintains all the
cast functions.

The following functions are moved from `CUtils.cpp` to `CCastUtils.cpp`:
```
* BOOL FBinaryCoercibleCastedScId(CExpression *pexpr, CColRef *pcr)
* BOOL FBinaryCoercibleCastedScId(CExpression *pexpr)
* const CColRef *PcrExtractFromScIdOrCastScId(CExpression *pexpr)
* CExpression *PexprCast( IMemoryPool *pmp, CMDAccessor *pmda, const
CColRef *pcr, IMDId *pmdidDest)
* BOOL FBinaryCoercibleCast(CExpression *pexpr)
* CExpression *PexprWithoutBinaryCoercibleCasts(CExpression *pexpr)
```

The following functions are moved from `CPredicateUtils.cpp` to
`CCastUtils.cpp`:

```
* DrgPexpr *PdrgpexprCastEquality(IMemoryPool *pmp, CExpression *pexpr)
* CExpression *PexprAddCast(IMemoryPool *pmp, CExpression *pexprPred)
* CExpression *PexprCast(IMemoryPool *pmp, CMDAccessor *pmda,
CExpression *pexpr, IMDId *pmdidDest)
```

Signed-off-by: Dhanashree Kashid <dkashid@pivotal.io>
Signed-off-by: Bhuvnesh Chaudhary <bchaudhary@pivotal.io>

--- a/libgpopt/CMakeLists.txt
+++ b/libgpopt/CMakeLists.txt
@@ -205,6 +205,8 @@ add_library(gpopt
             src/base/CRewindabilitySpec.cpp
             include/gpopt/base/CUtils.h
             src/base/CUtils.cpp
+            include/gpopt/base/CCastUtils.h
+            src/base/CCastUtils.cpp
             include/gpopt/base/CWindowFrame.h
             src/base/CWindowFrame.cpp
             include/gpopt/base/IColConstraintsMapper.h
