concourse: warn when new jobs aren't added as blocking release
New jobs should also be added to the "All" group, but we expect that
there may be exceptions and it's not a dealbreaker

--- a/concourse/pipelines/pipeline.yml
+++ b/concourse/pipelines/pipeline.yml
@@ -43,6 +43,7 @@ groups:
   - mpp_interconnect
   - QP_runaway-query
   - QP_optimizer-functional
+  - validate_pipeline
 
 - name: Release
   jobs:
@@ -1608,6 +1609,16 @@ jobs:
         TEST_OS: centos
         CONFIGURE_FLAGS: {{configure_flags}}
 
+- name: validate_pipeline
+  plan:
+  - aggregate:
+    - get: gpdb_src
+      trigger: true
+    - get: centos-gpdb-dev-6
+  - task: validate_pipeline
+    file: gpdb_src/concourse/tasks/validate_pipeline.yml
+    image: centos-gpdb-dev-6
+
 - name: Release_Candidate
   plan:
   - get: gpdb_src
@@ -1652,4 +1663,5 @@ jobs:
     - mpp_interconnect
     - QP_runaway-query
     - QP_optimizer-functional
+    - validate_pipeline
 
