PXF extension with external table read from PXF demo profile (#2872)
Signed-off-by: Lav Jain <ljain@pivotal.io>
        Signed-off-by: Oleksandr Diachenko <odiachenko@pivotal.io>
        Signed-off-by: Shivram Mani <smani@pivotal.io>
        Signed-off-by: John Gaskin <jgaskin@pivotal.io>
        Signed-off-by: Alexandra Wang <lewang@pivotal.io>

--- a/GNUmakefile.in
+++ b/GNUmakefile.in
@@ -177,6 +177,7 @@ destroy-demo-cluster:
 unittest-check:
 	$(MAKE) -C src/backend unittest-check
 	$(MAKE) -C src/bin unittest-check
+	$(MAKE) -C gpAux/extensions unittest-check
 
 
 GNUmakefile: GNUmakefile.in $(top_builddir)/config.status
