--- a/concourse/pipelines/pipeline.yml
+++ b/concourse/pipelines/pipeline.yml
@@ -2,13 +2,16 @@ groups:
 - name: all
   jobs:
   - compile_gpdb_centos6
+  - compile_gpdb_pxf_centos6
   - compile_gpdb_open_source_centos6
   - compile_gpdb_binary_swap_centos6
   - compile_gpdb_centos7
   - compile_gpdb_sles11
   - compile_gpdb_windows_cl
   - icw_planner_centos6
+  - icw_planner_pxf_centos6
   - icw_gporca_centos6
+  - icw_gporca_pxf_centos6
   - icw_gporca_centos7
   - icw_gporca_sles11
   - icw_planner_ictcp_centos6
@@ -21,6 +24,7 @@ groups:
   - MM_gppkg
   - MM_gpinitsystem
   - MM_pt-rebuild
+  - regression_tests_pxf_centos
   - fts
   - storage
   - QP_memory-accounting
@@ -178,6 +182,15 @@ resources:
     region_name: {{aws-region}}
     secret_access_key: {{bucket-secret-access-key}}
     versioned_file: {{bin_gpdb_centos_versioned_file}}
+
+- name: bin_gpdb_pxf_centos6
+  type: s3
+  source:
+    access_key_id: {{bucket-access-key-id}}
+    bucket: {{bucket-name}}
+    region_name: {{aws-region}}
+    secret_access_key: {{bucket-secret-access-key}}
+    versioned_file: {{bin_gpdb_pxf_centos_versioned_file}}
 
 - name: binary_swap_gpdb_centos6
   type: s3
@@ -414,6 +427,24 @@ resources:
     secret_access_key: {{bucket-secret-access-key}}
     regexp: deliverables/greenplum-db-(.*)-behave.tar.gz
 
+- name: singlecluster
+  type: s3
+  source:
+    access_key_id: {{hawq-aws-access-key-id}}
+    secret_access_key: {{hawq-aws-secret-access-key}}
+    bucket: {{pxf-aws-bucket-name}}
+    region_name: {{aws-region}}
+    versioned_file: singlecluster-without-pxf/singlecluster-CDH.tar.gz
+
+- name: pxf_tarball
+  type: s3
+  source:
+    access_key_id: {{hawq-aws-access-key-id}}
+    secret_access_key: {{hawq-aws-secret-access-key}}
+    bucket: {{pxf-aws-bucket-name}}
+    region_name: {{aws-region}}
+    versioned_file: tarballs/pxf.tar.gz
+
 - name: nightly-trigger
   type: time
   source:
@@ -498,6 +529,30 @@ jobs:
     - put: installer_rhel6_gpdb_loaders
       params:
         file: gpdb_artifacts/greenplum-loaders-*-rhel6-x86_64.zip
+
+- name: compile_gpdb_pxf_centos6
+  plan:
+  - aggregate:
+    - get: gpdb_src
+      trigger: true
+    - get: gpaddon_src
+    - get: centos-gpdb-dev-6
+  - task: compile_gpdb_pxf
+    file: gpdb_src/concourse/tasks/compile_gpdb.yml
+    image: centos-gpdb-dev-6
+    params:
+      IVYREPO_HOST: {{ivyrepo_host}}
+      IVYREPO_REALM: {{ivyrepo_realm}}
+      IVYREPO_USER: {{ivyrepo_user}}
+      IVYREPO_PASSWD: {{ivyrepo_passwd}}
+      CONFIGURE_FLAGS: {{configure_pxf_flags}}
+      TARGET_OS: centos
+      TARGET_OS_VERSION: 6
+      BLD_TARGETS: "clients loaders"
+  - aggregate:
+    - put: bin_gpdb_pxf_centos6
+      params:
+        file: gpdb_artifacts/bin_gpdb.tar.gz
 
 - name: compile_gpdb_open_source_centos6
   public: true
@@ -649,6 +704,29 @@ jobs:
       TEST_OS: centos
       CONFIGURE_FLAGS: {{configure_flags}}
 
+- name: icw_planner_pxf_centos6
+  plan:
+  - aggregate:
+    - get: gpdb_src
+      passed: [compile_gpdb_pxf_centos6]
+    - get: bin_gpdb
+      resource: bin_gpdb_pxf_centos6
+      passed: [compile_gpdb_pxf_centos6]
+      trigger: true
+    - get: binary_swap_gpdb
+      resource: binary_swap_gpdb_centos6
+      passed: [compile_gpdb_binary_swap_centos6]
+      trigger: true
+    - get: centos-gpdb-dev-6
+  - task: ic_gpdb
+    file: gpdb_src/concourse/tasks/ic_gpdb_binary_swap.yml
+    image: centos-gpdb-dev-6
+    params:
+      MAKE_TEST_COMMAND: PGOPTIONS='-c optimizer=off' installcheck-world
+      BLDWRAP_POSTGRES_CONF_ADDONS: "fsync=off"
+      TEST_OS: centos
+      CONFIGURE_FLAGS: {{configure_pxf_flags}}
+
 - name: icw_gporca_centos6
   plan:
   - aggregate:
@@ -667,6 +745,25 @@ jobs:
       BLDWRAP_POSTGRES_CONF_ADDONS: "fsync=off"
       TEST_OS: centos
       CONFIGURE_FLAGS: {{configure_flags}}
+
+- name: icw_gporca_pxf_centos6
+  plan:
+  - aggregate:
+    - get: gpdb_src
+      passed: [compile_gpdb_pxf_centos6]
+    - get: bin_gpdb
+      resource: bin_gpdb_pxf_centos6
+      passed: [compile_gpdb_pxf_centos6]
+      trigger: true
+    - get: centos-gpdb-dev-6
+  - task: ic_gpdb
+    file: gpdb_src/concourse/tasks/ic_gpdb.yml
+    image: centos-gpdb-dev-6
+    params:
+      MAKE_TEST_COMMAND: PGOPTIONS='-c optimizer=on' installcheck-world
+      BLDWRAP_POSTGRES_CONF_ADDONS: "fsync=off"
+      TEST_OS: centos
+      CONFIGURE_FLAGS: {{configure_pxf_flags}}
 
 - name: icw_gporca_centos7
   serial: true
@@ -759,6 +856,28 @@ jobs:
       gpcloud_access_key_id: {{gpcloud-access-key-id}}
       gpcloud_secret_access_key: {{gpcloud-secret-access-key}}
       overwrite_gpcloud: false
+      TARGET_OS: centos
+      TARGET_OS_VERSION: 6
+
+- name: regression_tests_pxf_centos
+  plan:
+  - aggregate:
+    - get: gpdb_src
+      passed: [compile_gpdb_pxf_centos6]
+    - get: bin_gpdb
+      resource: bin_gpdb_pxf_centos6
+      passed: [compile_gpdb_pxf_centos6]
+      trigger: true
+    - get: singlecluster
+      trigger: true
+    - get: pxf_tarball
+      trigger: true
+    - get: centos-gpdb-dev-6
+  - task: regression_tests_pxf
+    file: gpdb_src/concourse/tasks/regression_tests_pxf.yml
+    image: centos-gpdb-dev-6
+    params:
+      overwrite_pxf: false
       TARGET_OS: centos
       TARGET_OS_VERSION: 6
 
