--- a/src/Makefile.global.in
+++ b/src/Makefile.global.in
@@ -175,6 +175,7 @@ with_zlib	= @with_zlib@
 with_apr_config	= @with_apr_config@
 with_apu_config	= @with_apu_config@
 with_libsigar	= @with_libsigar@
+with_pxf        = @with_pxf@
 enable_shared	= @enable_shared@
 enable_rpath	= @enable_rpath@
 # NLS is not supported in Greenplum, see comment documenting
