update validate pipeline job
Add MM_gpinitstandby as part of release candidate

Follow up commit on 51a1cad7b5

--- a/concourse/pipelines/pipeline.yml
+++ b/concourse/pipelines/pipeline.yml
@@ -1743,6 +1743,7 @@ jobs:
     - MM_gpcheckcat
     - MM_gprecoverseg
     - MM_gpexpand
+    - MM_gpinitstandby
     - DPM_gptransfer-43x-to-5x
     - DPM_gptransfer-5x-to-5x
     - cs-pg-two-phase
